syntax = "proto2";

message PingRequest {
    required uint64 counter = 1;
}

message PingResponse {
    enum Status {
        OK = 1;
        ERROR = 2;
    }

    required Status status = 1;
    required uint64 counter = 2;
}

service MyService {
    rpc Ping (PingRequest) returns (PingResponse);
}